[gd_scene load_steps=16 format=3 uid="uid://doshuvfdpf6vi"]

[ext_resource type="Texture2D" uid="uid://bvncww0wyj0qc" path="res://assets/world2tilesheet.png" id="1_dnfdv"]
[ext_resource type="Script" path="res://worlds/level_1-1.gd" id="1_f51um"]
[ext_resource type="PackedScene" uid="uid://b51w1y56388uq" path="res://player/Player.tscn" id="2_3oxgt"]
[ext_resource type="Script" path="res://worlds/Camera2D.gd" id="3_fl0y1"]
[ext_resource type="Texture2D" uid="uid://bqalt3x1edoj5" path="res://assets/resumebutton.png" id="4_ta7iq"]
[ext_resource type="Texture2D" uid="uid://c8wd83cioildd" path="res://assets/resumebuttonhover.png" id="5_di8qd"]
[ext_resource type="Texture2D" uid="uid://cp1g3s4xidbsu" path="res://assets/restartbutton.png" id="6_kqjjf"]
[ext_resource type="Texture2D" uid="uid://bwjidlpd0vcc4" path="res://assets/restartbuttonhover.png" id="7_7mtab"]
[ext_resource type="Texture2D" uid="uid://j6clm8vt1rd" path="res://assets/mainmenubutton.png" id="8_n54lu"]
[ext_resource type="Texture2D" uid="uid://dxpfgikepjkec" path="res://assets/mainmenubuttonpng.png" id="9_q6tsy"]
[ext_resource type="Texture2D" uid="uid://d2x7yfysppnob" path="res://assets/heart.png" id="10_ri43m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ws6m1"]
texture = ExtResource("1_dnfdv")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_q6qxs"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ws6m1")

[sub_resource type="Gradient" id="Gradient_0egue"]
offsets = PackedFloat32Array(0.440273, 0.716724)
colors = PackedColorArray(0.439049, 0.439049, 0.439049, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1klqj"]
gradient = SubResource("Gradient_0egue")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.487179, 0.465812)

[node name="Level2-1" type="Node2D"]
script = ExtResource("1_f51um")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_q6qxs")
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(0, 65536, 1, 65536, 65536, 0, 131072, 65536, 0, 196608, 65536, 0, 262144, 65536, 0, 327680, 65536, 0, 393216, 65536, 0, 458752, 65536, 0, 524288, 65536, 0, 589824, 65536, 0, 655360, 65536, 0, 720896, 65536, 0, 786432, 65536, 0, 851968, 65536, 0, 917504, 65536, 0, 983040, 65536, 1, 1, 65536, 0, 65537, 65536, 0, 131073, 65536, 0, 196609, 65536, 0, 262145, 65536, 0, 327681, 65536, 0, 393217, 65536, 0, 458753, 65536, 0, 524289, 65536, 0, 589825, 65536, 0, 655361, 65536, 0, 720897, 65536, 0, 786433, 65536, 0, 851969, 65536, 0, 917505, 65536, 0, 983041, 65536, 0, 2, 65536, 0, 65538, 65536, 0, 131074, 65536, 0, 196610, 65536, 0, 262146, 65536, 0, 327682, 65536, 0, 393218, 65536, 0, 458754, 65536, 0, 524290, 65536, 0, 589826, 65536, 0, 655362, 65536, 0, 720898, 65536, 0, 786434, 65536, 0, 851970, 65536, 0, 917506, 65536, 0, 983042, 65536, 0, 3, 65536, 0, 65539, 65536, 0, 131075, 65536, 0, 196611, 65536, 0, 262147, 65536, 0, 327683, 65536, 0, 393219, 65536, 0, 458755, 65536, 0, 524291, 65536, 0, 589827, 65536, 0, 655363, 65536, 0, 720899, 65536, 0, 786435, 65536, 0, 851971, 65536, 0, 917507, 65536, 0, 983043, 65536, 0, 4, 65536, 0, 65540, 65536, 0, 131076, 65536, 0, 196612, 65536, 0, 262148, 65536, 0, 327684, 65536, 0, 393220, 65536, 0, 458756, 65536, 0, 524292, 65536, 0, 589828, 65536, 0, 655364, 65536, 0, 720900, 65536, 0, 786436, 65536, 0, 851972, 65536, 0, 917508, 65536, 0, 983044, 65536, 0, 5, 65536, 0, 65541, 65536, 0, 131077, 65536, 0, 196613, 65536, 0, 262149, 65536, 0, 327685, 65536, 0, 393221, 65536, 0, 458757, 65536, 0, 524293, 65536, 0, 589829, 65536, 0, 655365, 65536, 0, 720901, 65536, 0, 786437, 65536, 0, 851973, 65536, 0, 917509, 65536, 0, 983045, 65536, 0, 6, 65536, 0, 65542, 65536, 0, 131078, 65536, 0, 196614, 65536, 0, 262150, 65536, 0, 327686, 65536, 0, 393222, 65536, 0, 458758, 65536, 0, 524294, 65536, 0, 589830, 65536, 0, 655366, 65536, 0, 720902, 65536, 0, 786438, 65536, 0, 851974, 65536, 0, 917510, 65536, 0, 983046, 65536, 0, 7, 65536, 0, 65543, 65536, 0, 131079, 65536, 0, 196615, 65536, 0, 262151, 65536, 0, 327687, 65536, 0, 393223, 65536, 0, 458759, 65536, 0, 524295, 65536, 0, 589831, 65536, 0, 655367, 65536, 0, 720903, 65536, 0, 786439, 65536, 0, 851975, 65536, 0, 917511, 65536, 0, 983047, 65536, 0, 8, 65536, 0, 65544, 65536, 0, 131080, 65536, 0, 196616, 65536, 0, 262152, 65536, 0, 327688, 65536, 0, 393224, 65536, 0, 458760, 65536, 0, 524296, 65536, 0, 589832, 65536, 0, 655368, 65536, 0, 720904, 65536, 0, 786440, 65536, 0, 851976, 65536, 0, 917512, 65536, 0, 983048, 65536, 0, 9, 65536, 0, 65545, 65536, 0, 131081, 65536, 0, 196617, 65536, 0, 262153, 65536, 0, 327689, 65536, 0, 393225, 65536, 0, 458761, 65536, 0, 524297, 65536, 0, 589833, 65536, 0, 655369, 65536, 0, 720905, 65536, 0, 786441, 65536, 0, 851977, 65536, 0, 917513, 65536, 0, 983049, 65536, 0, 10, 65536, 0, 65546, 65536, 0, 131082, 65536, 0, 196618, 65536, 0, 262154, 65536, 0, 327690, 65536, 0, 393226, 65536, 0, 458762, 65536, 0, 524298, 65536, 0, 589834, 65536, 0, 655370, 65536, 0, 720906, 65536, 0, 786442, 65536, 0, 851978, 65536, 0, 917514, 65536, 0, 983050, 65536, 0, 11, 65536, 0, 65547, 65536, 0, 131083, 65536, 0, 196619, 65536, 0, 262155, 65536, 0, 327691, 65536, 0, 393227, 65536, 0, 458763, 65536, 0, 524299, 65536, 0, 589835, 65536, 0, 655371, 65536, 0, 720907, 65536, 0, 786443, 65536, 0, 851979, 65536, 0, 917515, 65536, 0, 983051, 65536, 0, 12, 65536, 0, 65548, 65536, 0, 131084, 65536, 0, 196620, 65536, 0, 262156, 65536, 0, 327692, 65536, 0, 393228, 65536, 0, 458764, 65536, 0, 524300, 65536, 0, 589836, 65536, 0, 655372, 65536, 0, 720908, 65536, 0, 786444, 65536, 0, 851980, 65536, 0, 917516, 65536, 0, 983052, 65536, 0, 13, 65536, 0, 65549, 65536, 0, 131085, 65536, 0, 196621, 65536, 0, 262157, 65536, 0, 327693, 65536, 0, 393229, 65536, 0, 458765, 65536, 0, 524301, 65536, 0, 589837, 65536, 0, 655373, 65536, 0, 720909, 65536, 0, 786445, 65536, 0, 851981, 65536, 0, 917517, 65536, 0, 983053, 65536, 0, 14, 65536, 0, 65550, 65536, 0, 131086, 65536, 0, 196622, 65536, 0, 262158, 65536, 0, 327694, 65536, 0, 393230, 65536, 0, 458766, 65536, 0, 524302, 65536, 0, 589838, 65536, 0, 655374, 65536, 0, 720910, 65536, 0, 786446, 65536, 0, 851982, 65536, 0, 917518, 65536, 0, 983054, 65536, 0, 15, 65536, 1, 65551, 65536, 0, 131087, 65536, 0, 196623, 65536, 0, 262159, 65536, 0, 327695, 65536, 0, 393231, 65536, 0, 458767, 65536, 0, 524303, 65536, 0, 589839, 65536, 0, 655375, 65536, 0, 720911, 65536, 0, 786447, 65536, 0, 851983, 65536, 0, 917519, 65536, 0, 983055, 65536, 1)
layer_1/name = "Level"
layer_1/tile_data = PackedInt32Array(983041, 65536, 2, 983042, 65536, 2, 983043, 65536, 2, 983044, 65536, 2, 983045, 65536, 2, 983046, 65536, 2, 983047, 65536, 2, 983048, 65536, 2, 983049, 65536, 2, 983050, 65536, 2, 983051, 65536, 2, 983052, 65536, 2, 983053, 65536, 2, 983054, 65536, 2, 589839, 196608, 2, 655375, 196608, 2, 720911, 196608, 2, 786447, 196608, 2, 851983, 196608, 2, 917519, 196608, 2, 262159, 196608, 2, 327695, 196608, 2, 393231, 196608, 2, 458767, 196608, 2, 524303, 196608, 2, 65551, 196608, 2, 131087, 196608, 2, 196623, 196608, 2, 1, 262144, 2, 2, 262144, 2, 3, 262144, 2, 4, 262144, 2, 5, 262144, 2, 6, 262144, 2, 7, 262144, 2, 8, 262144, 2, 9, 262144, 2, 10, 262144, 2, 11, 262144, 2, 12, 262144, 2, 13, 262144, 2, 14, 262144, 2, 65536, 131072, 2, 131072, 131072, 2, 196608, 131072, 2, 262144, 131072, 2, 327680, 131072, 2, 393216, 131072, 2, 458752, 131072, 2, 524288, 131072, 2, 589824, 131072, 2, 655360, 131072, 2, 720896, 131072, 2, 786432, 131072, 2, 851968, 131072, 2, 917504, 131072, 2, 983055, 65536, 1, 983040, 65536, 1, 15, 65536, 1, 0, 65536, 1)

[node name="Player" parent="." instance=ExtResource("2_3oxgt")]
process_mode = 1
position = Vector2(171, 29)
jump_scaler = 1000
jump_max_speed = -600
gravity = 1500
friction = 0.6

[node name="PointLight2D2" type="PointLight2D" parent="Player"]
light_mask = 2
energy = 0.18
shadow_enabled = true
texture = SubResource("GradientTexture2D_1klqj")

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 4
position = Vector2(128, 0)
script = ExtResource("3_fl0y1")

[node name="PauseMenu" type="Control" parent="Camera2D"]
process_mode = 3
visible = false
z_index = 8
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -48.0
offset_right = -64.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/PauseMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Resume" type="TextureButton" parent="Camera2D/PauseMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_ta7iq")
texture_hover = ExtResource("5_di8qd")

[node name="Restart" type="TextureButton" parent="Camera2D/PauseMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_kqjjf")
texture_hover = ExtResource("7_7mtab")

[node name="ReturnToMainMenu" type="TextureButton" parent="Camera2D/PauseMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_n54lu")
texture_hover = ExtResource("9_q6tsy")

[node name="DeadMenu" type="Control" parent="Camera2D"]
process_mode = 3
visible = false
z_index = 8
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -48.0
offset_right = -64.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/DeadMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Restart" type="TextureButton" parent="Camera2D/DeadMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_kqjjf")
texture_hover = ExtResource("7_7mtab")

[node name="ReturnToMainMenu" type="TextureButton" parent="Camera2D/DeadMenu/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_n54lu")
texture_hover = ExtResource("9_q6tsy")

[node name="UILayer" type="CanvasLayer" parent="Camera2D"]

[node name="UI" type="Control" parent="Camera2D/UILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 56.0
offset_bottom = 16.0

[node name="Health" type="HBoxContainer" parent="Camera2D/UILayer/UI"]
layout_mode = 0
offset_right = 56.0
offset_bottom = 16.0

[node name="health1" type="TextureRect" parent="Camera2D/UILayer/UI/Health"]
layout_mode = 2
texture = ExtResource("10_ri43m")

[node name="health2" type="TextureRect" parent="Camera2D/UILayer/UI/Health"]
layout_mode = 2
texture = ExtResource("10_ri43m")

[node name="health3" type="TextureRect" parent="Camera2D/UILayer/UI/Health"]
layout_mode = 2
texture = ExtResource("10_ri43m")

[node name="GameTime" type="Control" parent="Camera2D/UILayer/UI"]
anchors_preset = 0
offset_left = 24.0
offset_top = -3.0
offset_right = 64.0
offset_bottom = 37.0
scale = Vector2(0.1, 0.1)

[node name="minutes2" type="Label" parent="Camera2D/UILayer/UI/GameTime"]
texture_filter = 1
layout_mode = 0
offset_left = 650.0
offset_top = 20.0
offset_right = 863.0
offset_bottom = 225.0
scale = Vector2(1.1, 1.1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 150
text = "00:"

[node name="seconds2" type="Label" parent="Camera2D/UILayer/UI/GameTime"]
texture_filter = 1
layout_mode = 0
offset_left = 880.0
offset_top = 20.0
offset_right = 1093.0
offset_bottom = 225.0
scale = Vector2(1.1, 1.1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 150
text = "00:"

[node name="milliseconds2" type="Label" parent="Camera2D/UILayer/UI/GameTime"]
texture_filter = 1
layout_mode = 0
offset_left = 1110.0
offset_top = 20.0
offset_right = 1323.0
offset_bottom = 225.0
scale = Vector2(1.1, 1.1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 150
text = "00:"

[node name="minutes" type="Label" parent="Camera2D/UILayer/UI/GameTime"]
texture_filter = 1
layout_mode = 0
offset_left = 650.0
offset_top = 20.0
offset_right = 863.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 150
text = "00:"

[node name="seconds" type="Label" parent="Camera2D/UILayer/UI/GameTime"]
texture_filter = 1
layout_mode = 0
offset_left = 880.0
offset_top = 20.0
offset_right = 1093.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 150
text = "00:"

[node name="milliseconds" type="Label" parent="Camera2D/UILayer/UI/GameTime"]
texture_filter = 1
layout_mode = 0
offset_left = 1110.0
offset_top = 20.0
offset_right = 1323.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 150
text = "00:"

[node name="DarkRoomModulate" type="CanvasModulate" parent="."]
color = Color(0.521141, 0.521141, 0.521141, 1)

[node name="WinTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 3.0

[connection signal="pressed" from="Camera2D/PauseMenu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Camera2D/PauseMenu/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Camera2D/PauseMenu/VBoxContainer/ReturnToMainMenu" to="." method="_on_return_to_main_menu_pressed"]
[connection signal="pressed" from="Camera2D/DeadMenu/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Camera2D/DeadMenu/VBoxContainer/ReturnToMainMenu" to="." method="_on_return_to_main_menu_pressed"]
